--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,13 +101,18 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
+                <a href="/games/mtg/competitions/gpatlanta18/leagues" class="homepage-event-link">
+                  <p class="event-button">Grand Prix Atlanta (Modern) (November 3-4)</p>
+                </a>
+              </div>
+              <div class="event-container">
                 <a href="/games/mtg/competitions/ew18vintage/leagues" class="homepage-event-link">
-                  <p class="event-button">Eternal Weekend Vintage (November 2-4)</p>
+                  <p class="event-button">Eternal Weekend (Vintage) (November 2-4)</p>
                 </a>
               </div>
               <div class="event-container">
                 <a href="/games/mtg/competitions/ew18legacy/leagues" class="homepage-event-link">
-                  <p class="event-button">Eternal Weekend Legacy (November 3-4)</p>
+                  <p class="event-button">Eternal Weekend (Legacy) (November 3-4)</p>
                 </a>
               </div>
               <div class="event-container">
