--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -3,7 +3,7 @@
     <div>
       <h1>Featured <%= @game.name %> Events</h1>
     </div>
-    <div>
+    <!-- <div>
       <h3>Seasons</h3>
       <div class="competition-header-image hero-image inline-hero-image" style="background-image: url('<%= image_path 'mtgchamp18-header.jpg' %>')">
         <div class="container">
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div>
       <h3>Single Events</h3>
       <% if @competitions.where("start_date >= ? AND start_date <= ?", Time.now, Time.now + 2.weeks).length > 0 %>
