--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -29,7 +29,7 @@
       <div class="form-group required">
         <%= f.label :public, "Pick Type", class: "control-label" %>
         <p><em>Would you like to draft players or cards?</em></p>
-        <%= select_tag "league[pick_type]", options_for_select(%w[player card]), include_blank: "Select Thing to Draft", required: true, class: "form-control" %>
+        <%= select_tag "league[pick_type]", options_for_select(@pick_options), include_blank: "Select Thing to Draft", required: true, class: "form-control" %>
       </div>
 
       <div class="form-group required">
