switched to pt results import

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -28,7 +28,7 @@
                 <%= result.place %>
               </td>
               <td>
-                <%= result.player.name %>
+                <%= result.resultable.name %>
               </td>
               <td>
                 <%= result.points %>
