--- a/app/views/admin_mailer/new_user.html.erb
+++ b/app/views/admin_mailer/new_user.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>New User</h1>
     <p>
-      A new user just signed up for Fantasy Pro Tour.
+      A new user just signed up for Thousand Leagues.
     </p>
     <p>
       <%= @user.name %><br />
