--- a/app/views/draft_mailer/draft_finished.html.erb
+++ b/app/views/draft_mailer/draft_finished.html.erb
@@ -8,6 +8,6 @@
     <p>
       Click <%= link_to "here", @url %> to view all of the teams.
     </p>
-    <p>Thanks for using Fantasy Pro Tour!</p>
+    <p>Thanks for using Thousand Leagues!</p>
   </body>
 </html>
