--- a/app/views/faqs/show.html.erb
+++ b/app/views/faqs/show.html.erb
@@ -8,13 +8,13 @@
         <%= link_to "Twitter", "https://www.twitter.com/fantasyprotour", class: "btn btn-info", target: "_blank" %>
         <%= link_to "Discord", "https://discord.gg/CRVwFzf", class: "btn btn-primary", target: "_blank" %>
       </p>
-      <h1>How Fantasy Pro Tour Works</h1>
+      <h1>How Thousand Leagues Works</h1>
       <h5>What Is It?</h5>
       <p>
         Magic: the Gathering is a trading card game designed by <%= link_to "Wizards of the Coast", "http://www.magic.wizards.com", target: "_blank" %>. Many times a year, Wizards hosts invite-only tournaments called Pro Tours, where the best players compete for the title of Pro Tour Champion.
       </p>
       <p>
-        Fantasy Pro Tour gives Pro Tour fans another way of enjoying the tournament by allowing you to draft your favorite Magic pros and follow their success throughout the event. <%= link_to "Create a league", game_competitions_path(Game.find_by_name("Magic: the Gathering")) %>, invite your friends, and experience the Pro Tour like you never have before!
+        Thousand Leagues gives Pro Tour fans another way of enjoying the tournament by allowing you to draft your favorite Magic pros and follow their success throughout the event. <%= link_to "Create a league", game_competitions_path(Game.find_by_name("Magic: the Gathering")) %>, invite your friends, and experience the Pro Tour like you never have before!
       </p>
       <h5>League Structures</h5>
       <p>
