--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,11 +4,11 @@
       <div class="hero-text-container row">
         <div class="hero-text col-md">
           <div class="hero-intro">
-            Don't just watch the Pro Tour.
+            Don't just watch Magic.
           </div>
           <div class="hero-cta">
             <p>
-              Invite your friends and draft your favorite Magic pros to compete in your own Fantasy Pro Tour league! It's completely free!
+              Invite your friends and draft your favorite Magic pros to compete in your own 1KL fantasy league! It's completely free!
             </p>
             <p>
               <% if current_user %>
@@ -132,7 +132,7 @@
         <div class="row">
           <div class="col-md">
             <div class="">
-              <h3>Sign up for news and updates about Fantasy Pro Tour!</h3>
+              <h3>Sign up for news and updates about Thousand Leagues!</h3>
               <div class="subscribe">
                 <form>
                   <div class="form-group">
