--- a/app/views/invite_mailer/existing_user.html.erb
+++ b/app/views/invite_mailer/existing_user.html.erb
@@ -14,6 +14,6 @@
     <p>
       If you think you received this message by accident just ignore this invitation and accept our apologies.
     </p>
-    <p>Thanks for using Fantasy Pro Tour!</p>
+    <p>Thanks for using Thousand Leagues!</p>
   </body>
 </html>
