--- a/app/views/invite_mailer/new_user.html.erb
+++ b/app/views/invite_mailer/new_user.html.erb
@@ -12,11 +12,8 @@
       <%= @url %>
     </p>
     <p>
-      Fantasy Pro Tour is
-    </p>
-    <p>
       If you think you received this message by accident just ignore this invitation and accept our apologies.
     </p>
-    <p>Thanks for using Fantasy Pro Tour!</p>
+    <p>Thanks for using Thousand Leagues!</p>
   </body>
 </html>
