--- a/app/views/invites/show.html.erb
+++ b/app/views/invites/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <div id="invite" class="show">
-      <h2>Welcome to Fantasy Pro Tour!</h2>
+      <h2>Welcome to Thousand Leagues!</h2>
       <p>
         You've been invited to participate in a <%= @invite.league.leagueable.name %> Fantasy Draft!
       </p>
