--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -55,7 +55,7 @@
                     The Chalice is a charity tournament organized by Card Kingdom to raise money for Big Brothers, Big Sisters of Puget Sound. <a href="https://thechalice.causevox.com/" target="_blank">Each of the players in the Chalice is competing to see who can raise the most money for BBBS.</a>
                   </p>
                   <p>
-                    Hipsters of the Coast and Fantasy Pro Tour will donate $1 to the player you choose to support when you register a team in the Chalice fantasy league.
+                    Hipsters of the Coast and Thousand Leagues will donate $1 to the player you choose to support when you register a team in the Chalice fantasy league.
                   </p>
                 </div>
                 <div class="modal-footer">
