--- a/app/views/pick_mailer/next_pick.html.erb
+++ b/app/views/pick_mailer/next_pick.html.erb
@@ -11,6 +11,6 @@
     <p>
       To make your pick, just follow this link: <%= @url %>.
     </p>
-    <p>Thanks for using Fantasy Pro Tour!</p>
+    <p>Thanks for using Thousand Leagues!</p>
   </body>
 </html>
