--- a/app/views/admin_mailer/new_league.html.erb
+++ b/app/views/admin_mailer/new_league.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>New League</h1>
     <p>
-      Someone just created a new Fantasy Pro Tour league.
+      Someone just created a new Thousand Leagues fantasy league.
     </p>
     <p>
       <%= @league.leagueable.name %><br />
