--- a/app/views/contact_us/show.html.erb
+++ b/app/views/contact_us/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <div id="faq">
-      <h1>Contact Fantasy Pro Tour</h1>
+      <h1>Contact Thousand Leagues</h1>
       <p>
         Need support? Find us on Twitter or join our Discord!
       </p>
       <p>
-        <%= link_to "Twitter", "https://www.twitter.com/fantasyprotour", class: "btn btn-info", target: "_blank" %>
+        <%= link_to "Twitter", "https://www.twitter.com/1kleagues", class: "btn btn-info", target: "_blank" %>
         <%= link_to "Discord", "https://discord.gg/CRVwFzf", class: "btn btn-primary", target: "_blank" %>
       </p>
     </div>
