--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row logo-and-menu-container">
       <div class="col-md">
-        <div class="logo-container">
-          <%= image_tag "fantasy-pro-tour-logo-white.png", class: "logo" %>
+        <div class="logo-container tertiary-font">
+          THOUSAND LEAGUES
         </div>
       </div>
       <div class="col-md">
