--- a/app/views/league_mailer/invite_accepted.html.erb
+++ b/app/views/league_mailer/invite_accepted.html.erb
@@ -14,6 +14,6 @@
     <p>
       Click <%= link_to "here", @url %> whenever you're ready to start your draft.
     </p>
-    <p>Thanks for using Fantasy Pro Tour!</p>
+    <p>Thanks for using Thousand Leagues!</p>
   </body>
 </html>
