--- a/app/assets/stylesheets/competitions.scss
+++ b/app/assets/stylesheets/competitions.scss
@@ -5,7 +5,7 @@
   background-position: center top;
   background-size: cover;
   &.hero-image {
-    margin: -1rem -1rem 1rem -1rem;
+    margin: -1rem -15px 0;
     padding: 1rem;
     width: auto;
     &.inline-hero-image {
