--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -3,37 +3,39 @@
     <div>
       <h1>Featured <%= @game.name %> Events</h1>
     </div>
-    <!-- <div>
+    <div>
       <h3>Seasons</h3>
-      <div class="competition-header-image hero-image inline-hero-image" style="background-image: url('<%= image_path 'mtgchamp18-header.jpg' %>')">
-        <div class="container">
-          <div class="row">
-            <div class="col-md">
-              <%= Season.first.name %>
+      <% @seasons.each do |season| %>
+        <div class="competition-header-image hero-image inline-hero-image" style="background-image: url('<%= image_path 'mtgchamp18-header.jpg' %>')">
+          <div class="container">
+            <div class="row">
+              <div class="col-md">
+                <%= season.name %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="competition-info">
-        <div class="row">
-          <div class="col-md">
-            <p>
-              <strong>Start Date:</strong> <%= Season.first.start_date %>
-            </p>
-          </div>
-          <div class="col-md">
-            <p>
-              <strong>Events:</strong> <%= Season.first.competitions.count %>
-            </p>
-          </div>
-          <div class="col-md">
-            <p>
-              <%= link_to "View Leagues", game_season_leagues_path(Season.first.game, Season.first), class: "btn btn-primary" %>
-            </p>
+        <div class="competition-info">
+          <div class="row">
+            <div class="col-md">
+              <p>
+                <strong>Start Date:</strong> <%= season.start_date %>
+              </p>
+            </div>
+            <div class="col-md">
+              <p>
+                <strong>Events:</strong> <%= season.competitions.count %>
+              </p>
+            </div>
+            <div class="col-md">
+              <p>
+                <%= link_to "View Leagues", game_season_leagues_path(season.game, season), class: "btn btn-primary" %>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </div> -->
+      <% end %>
+    </div>
     <div>
       <h3>Single Events</h3>
       <% if @competitions.where("start_date >= ? AND start_date <= ?", Time.now, Time.now + 2.weeks).length > 0 %>
