--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,23 +101,18 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
-                <a href="/games/mtg/competitions/gpatlanta18/leagues" class="homepage-event-link">
-                  <p class="event-button">Grand Prix Atlanta (Modern) (November 3-4)</p>
+                <a href="/games/mtg/seasons/vsls9/leagues" class="homepage-event-link">
+                  <p class="event-button">Vintage Super League (Jan 15&mdash;Mar 3/26)</p>
                 </a>
               </div>
               <div class="event-container">
-                <a href="/games/mtg/competitions/ew18vintage/leagues" class="homepage-event-link">
-                  <p class="event-button">Eternal Weekend (Vintage) (November 2-4)</p>
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">MF New Jersey (January 25-27)</p>
                 </a>
               </div>
               <div class="event-container">
-                <a href="/games/mtg/competitions/ew18legacy/leagues" class="homepage-event-link">
-                  <p class="event-button">Eternal Weekend (Legacy) (November 3-4)</p>
-                </a>
-              </div>
-              <div class="event-container">
-                <a href="/games/mtg/competitions/ptgrn/leagues" class="homepage-event-link">
-                  <p class="event-button">Pro Tour Guilds of Ravnica (November 9-11)</p>
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">MC Cleveland (February 22-24)</p>
                 </a>
               </div>
             </div>
