--- a/app/views/seasons/leagues/new.html.erb
+++ b/app/views/seasons/leagues/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 offset-md-2">
     <h2><%= @season.name %></h2>
     <p>
-      A season-long league lasts for the entirety of a Pro Tour cycle (about three months). Players can earn points for their team at individual Grand Prix and Pro Tours.
+      A season-long league is made up of multiple events. Players or cards earn points for their team at each event within a season.
     </p>
     <p>
       <strong>Start Date:</strong> <%= @season.start_date %>
