started adding pick ems

--- a/app/views/leagues/_draft_types_modal.html.erb
+++ b/app/views/leagues/_draft_types_modal.html.erb
@@ -10,11 +10,15 @@
       <div class="modal-body">
         <h5>Pick X Players</h5>
         <p>
-          You pick X number of players for your team, independent of what players the other teams in your league select. This means that multiple teams in your league can have the same player. There is no timed draft portion&mdash;pick your players on your own schedule!
+          You pick X number of players or cards for your team, independent of what players or cards the other teams in your league select. This means that multiple teams in your league can have the same player or card. There is no timed draft portion&mdash;pick your players or cards on your own schedule!
         </p>
         <h5>Snake Draft</h5>
         <p>
-          You set a time for your league to draft and each team takes turns picking players for their team. Players can only be on one team per league.
+          You set a time for your league to draft and each team takes turns picking players or cards for their team. Players or cards can only be on one team per league.
+        </p>
+        <h5>Pick 'Em</h5>
+        <p>
+          Rather than drafting players or cards, you pick the winner of a given match. The player who picks the most winners, well, wins!
         </p>
       </div>
       <div class="modal-footer">
