--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -8,6 +8,9 @@
       <% when 'pick_x' %>
         <%= render 'pick_x_info' %>
         <%= render 'pick_x' %>
+      <% when 'pick_em' %>
+        <%= render 'pick_em_info' %>
+        <%= render 'pick_em' %>
       <% when 'special' %>
         <%= render 'special_info' %>
         <%= render 'special' %>
