--- a/app/views/seasons/leagues/index.html.erb
+++ b/app/views/seasons/leagues/index.html.erb
@@ -210,6 +210,10 @@
       <p>
         You set a time for your league to draft and each team takes turns picking players or cards for their team. Players or cards can only be on one team per league.
       </p>
+      <h5>Pick 'Em</h5>
+      <p>
+        Rather than drafting players or cards, you pick the winner of a given match. The player who picks the most winners, well, wins!
+      </p>
     </div>
   </div>
   <div id="submit-message" class="submit-message submit-message-absolute alert-ready-to-submit alert-fixed">
