--- a/app/assets/stylesheets/drafts.scss
+++ b/app/assets/stylesheets/drafts.scss
@@ -5,7 +5,7 @@
   #draft-progress-container {
     background: linear-gradient($gray-900 35%, $gray-800);
     color: $white;
-    margin: -1em -15px;
+    margin: -1em -15px 0;
     padding: 1em;
     h1 {
       font-size: 3em;
