--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -4,6 +4,8 @@
     <%= render 'snake_draft' %>
   <% when 'pick_x' %>
     <%= render 'pick_x_draft' %>
+  <% when 'pick_em' %>
+    <%= render 'pick_em_draft' %>
   <% when 'special' %>
     <%= render 'special_draft' %>
   <% end %>
