--- a/app/views/drafts/_pick_em_draft.html.erb
+++ b/app/views/drafts/_pick_em_draft.html.erb
@@ -9,8 +9,6 @@
     </p>
   </div>
 </div>
-<div>
-  <% @draft.league.leagueable.players.each do |player| %>
-    <%= player.name %>
-  <% end %>
+<div id="draft-details-container" class="row" data="<%= @draft.id %>" data-team="<%= current_user.team(@draft.league)&.id %>" data-current-pick="<%= @current_pick&.number %>" data-current-pick-id="<%= @current_pick&.id %>" data-your-picks="<%= @your_picks %>" data-draft-type="<%= @draft.league.draft_type %>" data-pick-type="<%= @draft.league.pick_type %>" data-submit-link="<%= Rails.application.routes.url_helpers.game_competition_league_draft_submit_url(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, protocol: Rails.env.production? ? 'https' : 'http')%>" data-competition-name="<%= @draft.league.leagueable.name %>">
+  <%= javascript_pack_tag "draft_viewer" %>
 </div>
